--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
     "date-fns": "^3.6.0",
+    "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.473.0",
     "mongodb": "^6.12.0",
