--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,5 +17,5 @@
   "background_color": "#ffffff",
   "display": "standalone",
   "scope": "/",
-  "theme_color": "#000000"
+  "theme_color": "#d9d9d9"
 }
