--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongoose": "^8.9.5",
     "next": "15.1.5",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
