--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@prisma/client": "^6.3.1",
     "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.2.2",
-    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.11",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.5",
@@ -25,6 +25,7 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.8",
     "@tanstack/react-table": "^8.20.6",
+    "@types/react-spinner": "^0.2.3",
     "@types/recharts": "^1.8.29",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -40,11 +41,12 @@
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.4.0",
+    "react-spinners": "^0.17.0",
     "recharts": "^2.15.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
